--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -35,13 +35,14 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-backgrounds": "^6.0.0",
-    "@storybook/addon-links": "^6.0.0",
+    "@storybook/addon-backgrounds": "^6.3.0",
+    "@storybook/addon-links": "^6.3.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.0.0",
-    "@storybook/addons": "^6.0.0",
+    "@storybook/addon-viewport": "^6.3.0",
+    "@storybook/addon-measure": "^1.3.1",
+    "@storybook/addons": "^6.3.0",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.0.0",
+    "@storybook/react": "^6.3.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.1.0-alpha.0",
@@ -77,11 +78,10 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^5.0.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "svg4everybody": "^2.1.9",
-    "swiper": "^5.4.5"
+    "popper.js": "^2.0.0-next.4",
+    "@splidejs/splide": "^2.4.21"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
