--- a/starter-kits/bootstrap/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/bootstrap/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -2,26 +2,6 @@ banner:
   use: "@molecules/banner/banner.twig"
   label: Banner
   description: Big image banner with text overlay.
-  allow_variant_token: true
-  variants:
-    top_left:
-      label: Top left
-    top_center:
-      label: Top center
-    top_right:
-      label: Top right
-    center_left:
-      label: Center left
-    center_center:
-      label: Center
-    center_right:
-      label: Center right
-    bottom_left:
-      label: Bottom left
-    bottom_center:
-      label: Bottom center
-    bottom_right:
-      label: Bottom right
   fields:
     image:
       type: pattern
@@ -31,7 +11,7 @@ banner:
         id: placeholder
         variant: image
         settings:
-          style: article
+          style: banner
     headline:
       type: text
       label: Headline
@@ -43,4 +23,19 @@ banner:
       label: Teaser
       description: Short optional teaser.
       preview: "<p>Nice and beautiful banner text.</p>"
-
+  settings:
+    position:
+      type: select
+      allow_token: true
+      label: Position
+      default_value: center_center
+      options:
+        top_left: Top left
+        top_center: Top center
+        top_right: Top right
+        center_left: Center left
+        center_center: Center
+        center_right: Center right
+        bottom_left: Bottom left
+        bottom_center: Bottom center
+        bottom_right: Bottom right
