--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -43,6 +43,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-links": "^6.1.0",
+    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.1.0",
     "@storybook/addons": "^6.1.0",
@@ -84,7 +85,6 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.4.1",
     "@splidejs/splide": "^2.4.21",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.3.1",
