--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -18,6 +18,10 @@ grid:
         - "<div class='w-full h-40 bg-gray-500'></div>"
         - "<div class='w-full h-40 bg-gray-500'></div>"
   settings:
+    equal_height:
+      type: boolean
+      group: advanced
+      label: Equal height
     gutter:
       type: select
       label: Gutter
