--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -47,6 +47,7 @@
     "@wingsuit-designsystem/cli": "1.1.0-alpha.0",
     "@wingsuit-designsystem/core": "1.1.0-alpha.0",
     "@wingsuit-designsystem/pattern": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-imagemin": "1.1.0-alpha.0",
     "@wingsuit-designsystem/preset-scss": "1.1.0-alpha.0",
     "@wingsuit-designsystem/storybook": "1.1.0-alpha.0",
     "autoprefixer": "^9.7.4",
