--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -42,14 +42,16 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
-    "@storybook/addon-links": "^6.1.0",
-    "@storybook/addon-measure": "^1.3.1",
+    "@storybook/addon-links": "^6.3.2",
+    "@storybook/addon-measure": "^2.0.0",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.1.0",
-    "@storybook/addons": "^6.1.0",
-    "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.1.0",
-    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/addon-viewport": "^6.3.2",
+    "@storybook/addons": "^6.3.2",
+    "@storybook/builder-webpack5": "^6.4.0-alpha.11",
+    "@storybook/linter-config": "^3.1.2",
+    "@storybook/manager-webpack5": "^6.4.0-alpha.11",
+    "@storybook/react": "^6.3.2",
+    "@storybook/storybook-deployer": "^2.8.10",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/cli": "1.1.0-alpha.0",
@@ -79,7 +81,7 @@
     "react-dom": "^16.13.1",
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
-    "storybook-addon-themes": "^6.0.1",
+    "storybook-addon-themes": "^6.1.0",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.41.3",
     "yo": "^3.1.1"
