--- a/starter-kits/bootstrap/package.json
+++ b/starter-kits/bootstrap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/starter-kit-bootstrap",
-  "version": "1.1.0-alpha.0",
+  "version": "1.1.0-alpha.1",
   "description": "Wingsuit Starter-Kit for Bootstap 4",
   "main": "",
   "license": "GPL-2.0",
@@ -37,20 +37,19 @@
     "@babel/preset-env": "^7.8.4",
     "@storybook/addon-backgrounds": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
+    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.3.0",
-    "@storybook/addon-measure": "^1.3.1",
     "@storybook/addons": "^6.3.0",
     "@storybook/linter-config": "^2.5.0",
     "@storybook/react": "^6.3.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.1.0-alpha.0",
-    "@wingsuit-designsystem/core": "1.1.0-alpha.0",
-    "@wingsuit-designsystem/pattern": "1.1.0-alpha.0",
-    "@wingsuit-designsystem/preset-compression": "1.1.0-alpha.0",
-    "@wingsuit-designsystem/preset-scss": "1.1.0-alpha.0",
-    "@wingsuit-designsystem/storybook": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/cli": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/core": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/pattern": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/preset-scss": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/storybook": "1.1.0-alpha.1",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
@@ -79,10 +78,10 @@
     "yo": "^3.1.1"
   },
   "dependencies": {
+    "@splidejs/splide": "^2.4.21",
     "bootstrap": "^5.0.2",
     "jquery": "^3.5.1",
-    "popper.js": "^2.0.0-next.4",
-    "@splidejs/splide": "^2.4.21"
+    "popper.js": "^2.0.0-next.4"
   },
   "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
 }
