--- a/starter-kits/vanilla-scss/package.json
+++ b/starter-kits/vanilla-scss/package.json
@@ -48,6 +48,7 @@
     "@wingsuit-designsystem/core": "1.1.0-alpha.0",
     "@wingsuit-designsystem/pattern": "1.1.0-alpha.0",
     "@wingsuit-designsystem/preset-scss": "1.1.0-alpha.0",
+    "@wingsuit-designsystem/preset-pwa": "1.1.0-alpha.0",
     "@wingsuit-designsystem/storybook": "1.1.0-alpha.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
