(docs) Replace front page configuration.

--- a/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -61,7 +61,7 @@ menu:
                 url: "/components/overview"
               - title: Global variables
                 url: "/components/globals"
-              - title: Wingsuit (UI Patterns)
+              - title: Wingsuit Pattern
                 url: "/components/wingsuit"
               - title: Presentation
                 url: "/components/presentation"
