--- a/docs/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/docs/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -96,6 +96,9 @@ container:
       gray-medium: 'dark bg-gray-500'
       video: 'bg-video-500'
       gray-light: 'bg-gray-300'
+      gray-lighter: 'bg-gray-100'
       purple-light: 'bg-purple-200'
       green-light: 'bg-green-200'
+      green-lighter: 'bg-green-100'
       blue-light: 'bg-blue-200'
+      yellow-lighter: 'bg-yellow-100'
