--- a/docs/source/default/patterns/04-templates/page/page.wingsuit.yml
+++ b/docs/source/default/patterns/04-templates/page/page.wingsuit.yml
@@ -13,3 +13,9 @@ page:
       preview:
         id: menu
         variant: primary
+    footer_menu:
+      type: pattern
+      label: Menu
+      preview:
+        id: menu
+        variant: footer
