--- a/docs/package.json
+++ b/docs/package.json
@@ -56,6 +56,9 @@
     "@wingsuit-designsystem/preset-mdx": "1.1.0-alpha.1",
     "@wingsuit-designsystem/preset-pages": "1.1.0-alpha.1",
     "@wingsuit-designsystem/preset-postcss8": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/preset-pwa": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/preset-imagemin": "1.1.0-alpha.1",
+    "@wingsuit-designsystem/preset-compression": "1.1.0-alpha.1",
     "@wingsuit-designsystem/preset-tailwind2": "1.1.0-alpha.1",
     "@wingsuit-designsystem/storybook": "1.1.0-alpha.1",
     "autoprefixer": "^9.7.4",
