--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/core",
-  "version": "1.1.0-alpha.2",
+  "version": "1.1.0-y.0",
   "description": "Wingsuit Core Design System.",
   "repository": {
     "type": "git",
@@ -29,8 +29,8 @@
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "@types/webpack": "^4.41.12",
-    "@wingsuit-designsystem/pattern": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/storybook": "1.1.0-alpha.2",
+    "@wingsuit-designsystem/pattern": "1.1.0-y.0",
+    "@wingsuit-designsystem/storybook": "1.1.0-y.0",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
@@ -79,5 +79,5 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc"
 }
