--- a/packages/pattern-react/package.json
+++ b/packages/pattern-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/pattern-react",
-  "version": "1.1.0-alpha.2",
+  "version": "1.1.0-y.0",
   "description": "Wingsuit Pattern for React.",
   "repository": {
     "type": "git",
@@ -32,7 +32,7 @@
   "dependencies": {
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/pattern": "1.1.0-alpha.2",
+    "@wingsuit-designsystem/pattern": "1.1.0-y.0",
     "polished": "^4.0.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1"
@@ -40,5 +40,5 @@
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
   },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4"
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc"
 }
