--- a/presets/examples/pages/package.json
+++ b/presets/examples/pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/examples-pages",
-  "version": "1.1.0-alpha.2",
+  "version": "1.1.0-y.0",
   "description": "A design system with Storybook, Tailwind and Drupal",
   "main": "",
   "private": true,
@@ -36,13 +36,13 @@
     "@tailwindcss/jit": "^0.1.18",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
-    "@wingsuit-designsystem/cli": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/core": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/pattern": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/preset-pages": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/preset-postcss8": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/preset-tailwind2": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/storybook": "1.1.0-alpha.2",
+    "@wingsuit-designsystem/cli": "1.1.0-y.0",
+    "@wingsuit-designsystem/core": "1.1.0-y.0",
+    "@wingsuit-designsystem/pattern": "1.1.0-y.0",
+    "@wingsuit-designsystem/preset-pages": "1.1.0-y.0",
+    "@wingsuit-designsystem/preset-postcss8": "1.1.0-y.0",
+    "@wingsuit-designsystem/preset-tailwind2": "1.1.0-y.0",
+    "@wingsuit-designsystem/storybook": "1.1.0-y.0",
     "autoprefixer": "^9.7.4",
     "core-js": "^3.4.1",
     "cross-env": "^6.0.3",
