--- a/presets/pages/package.json
+++ b/presets/pages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-pages",
-  "version": "1.1.0-alpha.2",
+  "version": "1.1.0-y.0",
   "description": "Wingsuit Pages.",
   "repository": {
     "type": "git",
@@ -32,11 +32,11 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "bfeff58b8f6e6ace1c28f31ad67d75d6f18ee5a4",
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
   "dependencies": {
-    "@wingsuit-designsystem/core": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/pattern": "1.1.0-alpha.2",
-    "@wingsuit-designsystem/pattern-react": "1.1.0-alpha.2",
+    "@wingsuit-designsystem/core": "1.1.0-y.0",
+    "@wingsuit-designsystem/pattern": "1.1.0-y.0",
+    "@wingsuit-designsystem/pattern-react": "1.1.0-y.0",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
     "js-yaml": "^4.0.0",
