--- a/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/banner/banner.wingsuit.yml
@@ -22,7 +22,7 @@ banner:
       type: text
       label: Teaser
       description: Short optional teaser.
-      preview: "<p>Nice and beautiful banner text.</p>"
+      preview: "<div class='prose'><h1>Lorem ipsum dolor sit.</h1></div>"
   settings:
     position:
       type: select
