--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -1,7 +1,7 @@
 section:
   use: "@organisms/section/section.twig"
   label: Columns section
-  icon_path: ws-assets://images/section-icon.svg
+  icon_path: ws-assets://images/section-icon.png
   extends:
     - grid.settings
     - container.settings
