--- a/starter-kits/tailwind/package.json
+++ b/starter-kits/tailwind/package.json
@@ -80,6 +80,7 @@
     "regenerator-runtime": "^0.13.3",
     "require-context": "^1.1.0",
     "storybook-addon-themes": "^6.0.1",
+    "storycap": "^3.0.4",
     "stylelint-scss": "^3.17.2",
     "webpack": "^4.41.3",
     "yo": "^3.1.1"
