--- a/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/section/section.wingsuit.yml
@@ -1,7 +1,7 @@
 section:
   use: "@organisms/section/section.twig"
   label: Columns section
-  icon_path: ws-assets://images/section-icon.png
+  icon_path: ws-assets://images/section-icon.svg
   extends:
     - grid.settings
     - container.settings
@@ -45,11 +45,13 @@ section:
     display_header_region:
       type: boolean
       label: Display header region
+      weight: 30
     columns_width_1:
       type: radios
       label: Column widths
       default_value: equal
       required: true
+      weight: 10
       options:
         equal: 100%
     columns_width_2:
@@ -57,6 +59,7 @@ section:
       label: Column widths
       default_value: equal
       required: true
+      weight: 10
       options:
         equal: 50%/50%
         66x33: 66%/33%
@@ -66,6 +69,7 @@ section:
       label: Column widths
       default_value: equal
       required: true
+      weight: 10
       options:
         equal: 33%/33%/33%
         25x50x25: 25%/50%/25%
@@ -74,6 +78,7 @@ section:
       label: Column widths
       default_value: equal
       required: true
+      weight: 10
       options:
         equal: 25%/25%/25%/25%
     columns_width_5:
@@ -81,6 +86,7 @@ section:
       label: Column widths
       default_value: equal
       required: true
+      weight: 10
       options:
         equal: 20%/20%/20%/20%
   variants:
