--- a/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/grid/grid.wingsuit.yml
@@ -20,8 +20,8 @@ grid:
   settings:
     equal_height:
       type: boolean
-      group: advanced
       label: Equal height
+      weight: 20
     gutter:
       type: select
       label: Gutter
