--- a/docs/source/default/patterns/04-templates/page/page.wingsuit.yml
+++ b/docs/source/default/patterns/04-templates/page/page.wingsuit.yml
@@ -25,3 +25,7 @@ page:
       preview:
         id: menu
         variant: footer
+  settings:
+    display_menu:
+      type: boolean
+      default_value: false
