--- a/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/container/container.wingsuit.yml
@@ -35,7 +35,7 @@ container:
       group: tab_bg
       options:
         "": Transparent
-        gray-medium: Medium gray/#6b7280
+        teal-medium: Teal/#14b8a6
         gray-light: Light gray/#d1d5db
     bg_image:
       type: media_library
@@ -59,5 +59,5 @@ container:
       large: 'max-w-7xl'
       xlarge: 'max-w-8xl'
     bg:
-      gray-medium: 'dark bg-gray-500'
+      teal-medium: 'dark bg-teal-500'
       gray-light: 'bg-gray-300'
