--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,7 @@
     "examples/*",
     "starter-kits/*"
   ],
-  "version": "1.1.0-y.0",
+  "version": "1.1.0",
   "registry": "https://registry.npmjs.org",
   "npmClient": "yarn"
 }
