--- a/presets/compression/package.json
+++ b/presets/compression/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-compression",
-  "version": "1.1.0-y.0",
+  "version": "1.1.0",
   "description": "Wingsuit Compression preset.",
   "repository": {
     "type": "git",
@@ -28,7 +28,7 @@
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
     "@gfx/zopfli": "^1.0.15",
-    "@wingsuit-designsystem/core": "1.1.0-y.0",
+    "@wingsuit-designsystem/core": "1.1.0",
     "compression-webpack-plugin": "^6.1.1",
     "zlib": "^1.0.5"
   },
