--- a/presets/imagemin/package.json
+++ b/presets/imagemin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-imagemin",
-  "version": "1.1.0-y.0",
+  "version": "1.1.0",
   "description": "Wingsuit image optimization preset.",
   "repository": {
     "type": "git",
