--- a/presets/scss/package.json
+++ b/presets/scss/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wingsuit-designsystem/preset-scss",
-  "version": "1.1.0-y.0",
+  "version": "1.1.0",
   "description": "Wingsuit SCSS preset.",
   "repository": {
     "type": "git",
@@ -27,7 +27,7 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@wingsuit-designsystem/core": "1.1.0-y.0",
+    "@wingsuit-designsystem/core": "1.1.0",
     "glob": "^7.1.6",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
