--- a/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -41,7 +41,7 @@ menu:
                 url: "/apps/drupal"
               - title: CMS
                 url: "/apps/cms"
-              - title: Paes
+              - title: Pages
                 url: "/apps/pages"
           - title: PRESETS
             url: "#"
