--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -45,7 +45,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-syntax-highlighter": "^15.3.1s"
+    "react-syntax-highlighter": "^15.3.1"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
