--- a/docs/apps/data/homepage/component.yml
+++ b/docs/apps/data/homepage/component.yml
@@ -26,7 +26,7 @@ data:
           :class="{'code-block__feature--active':$store.component_feature =='variants'}"
           @click="$store.component_feature = 'variants'"
           ></div>
-          <img src="/images/component_avatar.png">
+          <img src="/images/component_avatar.png" width="1209" height="1902">
           </div>
     codes:
       - key: 'yaml'
