--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -31,6 +31,7 @@
     "@types/webpack": "^4.41.12",
     "@wingsuit-designsystem/pattern": "1.1.2",
     "@wingsuit-designsystem/storybook": "1.1.2",
+    "@wingsuit-designsystem/twing-loader": "1.1.2",
     "autoprefixer": "^9.7.4",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
