(docs) Update kickstarter and docs tabs style

--- a/docs/source/default/patterns/01-atoms/badge/badge.wingsuit.yml
+++ b/docs/source/default/patterns/01-atoms/badge/badge.wingsuit.yml
@@ -7,3 +7,8 @@ badge:
       type: text
       label: Text
       preview: Text
+  settings:
+    round:
+      type: boolean
+      label: Round
+      default_value: true
