--- a/docs/source/default/patterns/01-atoms/rich-text/rich-text.wingsuit.yml
+++ b/docs/source/default/patterns/01-atoms/rich-text/rich-text.wingsuit.yml
@@ -38,3 +38,8 @@ rich_text:
       label: Default
     large:
       label: Large
+  settings:
+    text_align:
+      type: select
+      options:
+        center: Center
