(docs) Update component based theming

--- a/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
+++ b/docs/source/default/patterns/02-molecules/menu/menu.wingsuit.yml
@@ -84,6 +84,8 @@ menu:
           - title: DRUPAL
             url: "/drupal/ui_patterns"
             below:
+              - title: Thinking in Components!
+                url: "/drupal/overview"
               - title: Wingsuit Kickstarter
                 url: "/drupal/ui_patterns"
           - title: DOCUMENTATION
