--- a/examples/official-wingsuit/package.json
+++ b/examples/official-wingsuit/package.json
@@ -26,13 +26,13 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@packtracker/webpack-plugin": "^2.0.1",
-    "@storybook/addon-links": "^6.1.0",
+    "@storybook/addon-links": "^6.4.0-beta.4",
     "@storybook/addon-measure": "^1.3.1",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addon-viewport": "^6.1.0",
-    "@storybook/addons": "^6.1.0",
+    "@storybook/addon-viewport": "^6.4.0-beta.4",
+    "@storybook/addons": "^6.4.0-beta.4",
     "@storybook/linter-config": "^2.5.0",
-    "@storybook/react": "^6.1.0",
+    "@storybook/react": "^6.4.0-beta.4",
     "@storybook/storybook-deployer": "^2.8.7",
     "@wingsuit-designsystem/cli": "1.1.3",
     "@wingsuit-designsystem/core": "1.1.3",
