--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,7 +35,9 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
+    "buffer": "^6.0.3",
     "copy-webpack-plugin": "^5.1.1",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^3.4.0",
     "drupal-attribute": "^1.0.2",
     "external-svg-sprite-loader": "^5.0.1",
@@ -49,6 +51,7 @@
     "merge-deep": "^3.0.2",
     "mini-css-extract-plugin": "^1.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "path": "^0.12.7",
     "postcss": "^7.0.35",
     "postcss-loader": "^4.2.0",
     "postcss-nested": "^4.2.1",
@@ -57,18 +60,19 @@
     "prettier": "^2.3.0",
     "reflect-metadata": "^0.1.13",
     "resolve-url-loader": "^3.1.1",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^1.0.2",
     "stylelint": "^12.0.0",
     "stylelint-config-prettier": "^8.0.0",
     "stylelint-webpack-plugin": "^1.2.3",
-    "svg-sprite-loader": "^4.1.6",
+    "svg-sprite-loader": "^6.0.9",
     "svg-transform-loader": "^2.0.8",
     "svgo": "^1.3.2",
     "svgo-loader": "^2.2.1",
     "terser-webpack-plugin": "^2.3.4",
     "typescript": "^3.8.3",
-    "webpack": "^4.41.3",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^5.56.1",
+    "webpack-cli": "^4.8.0",
     "webpack-merge": "^4.2.2",
     "yaml-loader": "^0.6.0",
     "yargs": "^15.4.0"
@@ -79,5 +83,8 @@
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc"
+  "gitHead": "c8f79243b1d0a1dace0bf3b8edcd45f23271befc",
+  "devDependencies": {
+    "node-polyfill-webpack-plugin": "^1.1.4"
+  }
 }
