--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -30,13 +30,15 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@storybook/addon-controls": "^6.1.0",
-    "@storybook/addon-docs": "^6.1.0",
-    "@storybook/client-api": "^6.1.0",
-    "@storybook/components": "^6.1.0",
+    "@storybook/addon-controls": "^6.4.0-beta.4",
+    "@storybook/addon-docs": "^6.4.0-beta.4",
+    "@storybook/builder-webpack5": "^6.4.0-beta.4",
+    "@storybook/client-api": "^6.4.0-beta.4",
+    "@storybook/components": "^6.4.0-beta.4",
+    "@storybook/manager-webpack5": "^6.4.0-beta.4",
     "@storybook/preset-typescript": "^3.0.0",
     "@storybook/react": "^6.1.0",
-    "@storybook/theming": "^6.1.0",
+    "@storybook/theming": "^6.4.0-beta.4",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@wingsuit-designsystem/pattern": "1.1.3",
@@ -45,7 +47,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-syntax-highlighter": "^15.3.1"
+    "react-syntax-highlighter": "^15.3.1",
+    "webpack": "5"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
