--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,60 +26,60 @@
   },
   "homepage": "https://github.com/wingsuit-designsystem/wingsuit/tools#readme",
   "dependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/node": "^14.17.20",
-    "@types/webpack": "^5.28.0",
-    "@wingsuit-designsystem/pattern": "1.2.0-alpha.2",
-    "@wingsuit-designsystem/storybook": "1.2.0-alpha.2",
-    "autoprefixer": "^9.7.4",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.6",
+    "@types/jest": "27.0.2",
+    "@types/node": "16.10.2",
+    "@types/webpack": "5.28.0",
+    "@wingsuit-designsystem/pattern": "1.1.3",
+    "@wingsuit-designsystem/storybook": "1.1.3",
+    "autoprefixer": "10.3.7",
+    "babel-core": "6.26.3",
+    "babel-jest": "27.2.4",
+    "babel-loader": "8.2.2",
     "buffer": "^6.0.3",
-    "copy-webpack-plugin": "^5.1.1",
-    "crypto-browserify": "^3.12.0",
-    "css-loader": "^4.3.0",
-    "drupal-attribute": "^1.0.2",
-    "external-svg-sprite-loader": "^5.0.1",
-    "file-loader": "^5.0.2",
-    "fs-extra": "^9.0.0",
-    "glob": "^7.1.6",
-    "image-webpack-loader": "^8.0.1",
-    "jest": "^27.2.4",
+    "copy-webpack-plugin": "9.0.1",
+    "crypto-browserify": "3.12.0",
+    "css-loader": "6.3.0",
+    "drupal-attribute": "1.0.2",
+    "external-svg-sprite-loader": "7.2.0",
+    "file-loader": "6.2.0",
+    "fs-extra": "10.0.0",
+    "glob": "7.2.0",
+    "image-webpack-loader": "8.0.1",
+    "jest": "27.2.4",
     "jsondiffpatch": "^0.4.1",
     "loader-utils": "^2.0.0",
-    "lodash": "^4.17.15",
-    "merge-deep": "^3.0.2",
-    "mini-css-extract-plugin": "^2.3.0",
+    "lodash": "4.17.21",
+    "merge-deep": "3.0.3",
+    "mini-css-extract-plugin": "2.3.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "path": "^0.12.7",
-    "postcss": "^8.3.9",
-    "postcss-loader": "^5.3.0",
-    "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-replace": "^1.1.0",
+    "optimize-css-assets-webpack-plugin": "6.0.1",
+    "path": "0.12.7",
+    "postcss": "8.3.9",
+    "postcss-loader": "6.1.1",
+    "postcss-nested": "5.0.6",
+    "postcss-preset-env": "6.7.0",
+    "postcss-replace": "1.1.3",
     "prettier": "^2.3.0",
-    "reflect-metadata": "^0.1.13",
-    "resolve-url-loader": "^3.1.1",
-    "schema-utils": "^3.0.0",
-    "stream-browserify": "^3.0.0",
-    "style-loader": "^1.0.2",
-    "stylelint": "^12.0.0",
-    "stylelint-config-prettier": "^8.0.0",
-    "stylelint-webpack-plugin": "^1.2.3",
-    "svg-sprite-loader": "^6.0.9",
-    "svg-transform-loader": "^2.0.8",
-    "svgo": "^1.3.2",
-    "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^2.3.4",
-    "typescript": "^3.8.3",
+    "reflect-metadata": "0.1.13",
+    "resolve-url-loader": "4.0.0",
+    "schema-utils": "3.1.1",
+    "stream-browserify": "3.0.0",
+    "style-loader": "3.3.0",
+    "stylelint": "13.13.1",
+    "stylelint-config-prettier": "8.0.2",
+    "stylelint-webpack-plugin": "3.0.1",
+    "svg-sprite-loader": "6.0.9",
+    "svg-transform-loader": "2.0.13",
+    "svgo": "2.7.0",
+    "svgo-loader": "3.0.0",
+    "terser-webpack-plugin": "5.2.4",
+    "typescript": "4.4.3",
     "webpack": "^5.56.1",
     "webpack-cli": "^4.8.0",
-    "webpack-merge": "^4.2.2",
-    "yaml": "^1.10.2",
-    "yaml-loader": "^0.6.0",
-    "yargs": "^15.4.0"
+    "webpack-merge": "5.8.0",
+    "yaml": "1.10.2",
+    "yaml-loader": "0.6.0",
+    "yargs": "17.2.1"
   },
   "scripts": {
     "prepare": "node ../../scripts/prepare.js"
