--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
-  "main": "./dist/index.js",
+  "main": "./index.js",
   "files": [
     "bin/**/*",
     "dist/**/*",
@@ -37,7 +37,7 @@
     "@storybook/components": "^6.4.0-beta.4",
     "@storybook/manager-webpack5": "^6.4.0-beta.4",
     "@storybook/preset-typescript": "^3.0.0",
-    "@storybook/react": "^6.1.0",
+    "@storybook/react": "^6.4.0-beta.4",
     "@storybook/theming": "^6.4.0-beta.4",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
