WS: Added video and modified love yml.

--- a/docs/apps/data/homepage/love.yml
+++ b/docs/apps/data/homepage/love.yml
@@ -11,10 +11,23 @@ data:
         intro: "<p>With UI Patterns no code is needed. The UI Patterns ecosystem offers a lot of modules that help you to manage the mapping without presenter templates. But there are still corners in Drupal where you need a presenter templates.</p>
               <p>Don't forget to run <code class=\"language-bash\">yarn ws dev drupal</code></p>"
         content: |
-          <div class="relative" style="padding-top: 81.81818181818181%">
-                        <iframe class="absolute inset-0 w-full h-full"
-          src="https://www.youtube-nocookie.com/embed/Fe5DHtqhEF0"></iframe>
-          </div>
+          {% set make_love_modal_content %}
+          {% include "@atoms/button/button.twig" with {
+            "text": "More"|t,
+            "link": content.url
+          } %}
+          {% endset %}
+          {% include "@molecules/modal/modal.twig" with {
+            "content": make_love_modal_content
+          } %}
+            <div  class="max-w-7xl mx-auto w-full px-6">
+              <div class="bg-video-500 p-4 mb-16">
+                <video autoplay muted loop class="w-full">
+                  <source src="/videos/kickstarter_make_love.mp4" type="video/mp4"/>
+                  Your browser does not support the video tag.
+                </video>
+              </div>
+            </div>
       - key: 'presenter'
         title: 'Presenter template'
         intro_pattern:
