--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@types/enzyme": "^3.10.3",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
+    "babel-plugin-macros": "^3.1.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "codecov": "^3.5.0",
     "concurrently": "^5.1.0",
