--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -41,6 +41,7 @@
     "@storybook/theming": "^6.4.0-beta.4",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@wingsuit-designsystem/core": "1.2.0-alpha.2",
     "@wingsuit-designsystem/pattern": "1.2.0-alpha.2",
     "@wingsuit-designsystem/pattern-react": "1.2.0-alpha.2",
     "polished": "^4.0.5",
