--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -7,6 +7,7 @@
     "url": "git+https://github.com/wingsuit-designsystem/wingsuit.git"
   },
   "main": "./index.js",
+  "module": "./index.js",
   "files": [
     "bin/**/*",
     "dist/**/*",
