--- a/packages/storybook/tsconfig.json
+++ b/packages/storybook/tsconfig.json
@@ -3,10 +3,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "rootDir": "./src",
-    "strict": true,
-    "noUnusedLocals": true,
-    "outDir": "dist",
-    "jsx": "react"
+    "types": ["webpack-env", "jest", "node"]
   },
   "include": ["src/**/*"],
   "exclude": ["__tests__/**/*", "__int_tests__/**/*"]
