Add support for banner height and banner image position

--- a/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
+++ b/starter-kits/tailwind/apps/drupal/wingsuit.libraries.yml
@@ -6,6 +6,8 @@ core:
         preprocess: true
       ws-assets://tokens.css:
         preprocess: true
+      ws-assets://image.css:
+        preprocess: true
       ws-assets://hamburger.css:
         preprocess: true
       ws-assets://menu-primary.css:
