--- a/starter-kits/tailwind/source/default/patterns/01-atoms/svg/svg.wingsuit.yml
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/svg/svg.wingsuit.yml
@@ -8,13 +8,13 @@ svg_icon:
       type: textfield
       preview: fill-current
     size:
-      preview: w-4
+      preview: medium
       label: Size
       type: select
       options:
-        w-4: Small
-        w-8: Medium
-        w-12: Large
+        small: Small
+        medium: Medium
+        large: Large
     icon:
       type: token
       label: Icon
