(fix) Update browserlist configuration to fix alpinejs3.5 configuration

--- a/starter-kits/tailwind/.browserslistrc
+++ b/starter-kits/tailwind/.browserslistrc
@@ -1,4 +1,4 @@
-last 2 versions
-not dead
-> 1% in US
-ie 11
+last 2 Chrome versions
+last 2 Firefox versions
+last 2 Safari versions
+last 2 Edge versions
