--- a/presets/tailwind2/package.json
+++ b/presets/tailwind2/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "@wingsuit-designsystem/core": "1.1.5",
     "fs-extra": "^9.0.0",
-    "jsondiffpatch": "^0.3.11",
+    "json-diff": "^0.7.1",
     "tailwindcss": "^2.0.1-compat"
   },
   "scripts": {
